<resources>
    <string name="app_name">Dnd Character Manager</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_statallocation">Character Creation</string>
    <string name="title_activity_existing_characters">Existing Characters</string>
    <string name="title_activity_new_character">New Character</string>
    <string name="title_activity_drive_login">Log In</string>
    <string name="Open">Open</string>
    <string name="Name">Name</string>
    <string name="Close">Close</string>
    <string name="Race">Race</string>
    <string name="Class">Class</string>
    <string name="Background">Background</string>
    <string name="Alignment">Alignment</string>
    <string name="Level">Level</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="source_google_drive">Google Drive</string>
    <string name="start_drive">Start Google Drive</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="status_logged_out">Logged Out</string>
    <string name="status_logged_in">Logged In</string>
    <string name="status_user_cancelled">User Cancelled</string>
    <string name="status_error">We found a problem: %1$s</string>
    <string name="not_open_file">Could not open file</string>
</resources>
